[workspace]
members = ["cudd2-sys", "kure2-lua-sys", "kure2-sys"]
resolver = "3"

[workspace.dependencies]
cudd2-sys = { path = "cudd2-sys" }
fs_extra = "1.3.0"
gmp-mpfr-sys = { version = "1.6.5", default-features = false }
kure2-sys = { path = "kure2-sys" }
kure2-lua-sys = { path = "kure2-lua-sys" }
