[workspace]
members = ["cudd2-sys", "kure2", "kure2-cli", "kure2-lua-sys", "kure2-sys"]
resolver = "3"

[workspace.dependencies]
bindgen = "0.71.0"
cudd2-sys = { path = "cudd2-sys" }
fs_extra = "1.3.0"
gmp-mpfr-sys = { version = "1.6.5", default-features = false }
kure2 = { path = "kure2" }
kure2-sys = { path = "kure2-sys" }
kure2-lua-sys = { path = "kure2-lua-sys" }
libc = { version = "0.2.174", default-features = false }
pkg-config = "0.3.32"
pretty_assertions = "1.4.1"
rug = "1.27.0"
rustyline = "16.0.0"
va_list = "0.2.1"
