[package]
name = "kure2-cli"
version = "0.1.1"
edition = "2024"
description = "REPL for the Kure2 DSL"
readme = "../README.md"
repository = "https://github.com/Benjamin-Davies/kure2-rs"
license = "GPL-3.0"

[[bin]]
name = "kure"
path = "src/main.rs"

[dependencies]
kure2 = { workspace = true }
pretty_assertions = { workspace = true }
rustyline = { workspace = true }
