[package]
name = "kure2-lua-sys"
version = "0.1.0"
edition = "2021"
description = "FFI bindings for Lua, intended to be used with kure2-sys"
readme = "../README.md"
repository = "https://github.com/Benjamin-Davies/kure2-rs"
license = "MIT"

links = "kure2-lua"

[dependencies]
libc = { workspace = true }
va_list = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
fs_extra = { workspace = true }
