[package]
name = "kure2-sys"
version = "0.1.0"
edition = "2021"

links = "kure2-sys"

[dependencies]
cudd2-sys = { workspace = true }
gmp-mpfr-sys = { workspace = true }
kure2-lua-sys = { workspace = true }
libc = { workspace = true }
va_list = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
fs_extra = { workspace = true }
