[package]
name = "kure2-sys"
version = "0.1.0"
edition = "2021"
description = "FFI bindings for Kure2, a C library which provides manipulation of relations and operations of relation algebra"
readme = "../README.md"
repository = "https://github.com/Benjamin-Davies/kure2-rs"
license = "GPL-3.0"

links = "kure2-sys"

[dependencies]
cudd2-sys = { workspace = true }
gmp-mpfr-sys = { workspace = true }
kure2-lua-sys = { workspace = true }
libc = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
fs_extra = { workspace = true }
pkg-config = { workspace = true }
