[package]
name = "kure2"
version = "0.2.0"
edition = "2024"
description = "Safe bindings for Kure2, a C library which provides manipulation of relations and operations of relation algebra"
readme = "../README.md"
repository = "https://github.com/Benjamin-Davies/kure2-rs"
license = "GPL-3.0"

[dependencies]
kure2-lua-sys = { workspace = true }
kure2-sys = { workspace = true }
rug = { workspace = true }
